增加了日历页面

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,466 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" >
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-	<style>
-		table tr td {
-			 border:1px solid darkgray;
-			 text-align: center;
-			 overflow:hidden; 
-			 white-space:nowrap; 
-			 text-overflow:ellipsis;
-			 /* font-size: 0.35rem; */
-		}
-		table tr{
-			height: 0.8rem;
-		}
-		table {
-			margin: 1rem;
-		}
-		.red {
-			color: #ff0000;
-		}
-		.bk {
-			border-style: solid;
-		}
-	</style>
+<meta charset="UTF-8">
+<title>Calendar Window</title>
+
+
+
+<link rel="stylesheet" href="../static/css/style.css">
+
+
 </head>
-<body style="">
-	<div>
-		<input type="button" id="addButton" value="add"/>
-		<input type="button" id="examButton" value="exam"/>
-		<input type="button" id="examNewButton" value="exam new"/>
-		<input type="button" id="examOldButton" value="exam old"/>
-		<input type="button" id="studyButton" value="study"/>
-		<input type="button" id="wordsButton" value="words"/>
-	</div>
-	<div style="margin-top: 10px;">
-		<input type="button" id="changeDegree" value="change degree"/>
-	</div>
-	<div id="add" style="display:none">
-		<p  style="font-size: 18px;height: 22px;" ></p>
-		<div>
-			<div>english:</div>
-			<textarea type="text" id="english"></textarea>
-		</div>  
-		<div>
-			<div>chinese:</div>
-			<textarea type="text" id="chinese"cols="30" rows="15"></textarea>
-		</div>
-		<div>
-			<div>remark:</div>
-			<textarea type="text" id="remark"></textarea>
-		</div>
-		<div style="margin-top: 10px;">
-			<input type="button" id="addData" value="add data"/>
-		</div>
-		<div id="result">
-			
-			
-		</div>
-	</div>
-	
-	<div id="exam" style="display:none">
-		<p style="font-size: 18px;height: 22px;"></p>
-		<div>
-			<pre id="question" style="font-size: 18px; "> question</pre>
-		</div>
-		<div>
-			<textarea type="text" id="answer" cols="30" rows="8"></textarea>
-		</div>
-		<div style="margin-top: 10px;">
-			<input type="button" id="finishAnswer" value="finish"/>
-		</div>
-		<div><span id="now">1</span>\<span id="sum">8</span> </div>
-	</div>
-	
-	<div id="words" style="display:none">
-		<p style="font-size: 18px;height: 22px;"> </p>
-		<div>
-			<table id="tableBody">
-				<tr>
-					<td>id</td>
-					<td>English</td>
-					<td>chinese</td>
-					<td>degree</td>
-					<td>reviwe</td>
-					<td>study time</td>
-					<td>study count</td>
-					<td>success</td>
-					<td>error</td>
-					<td>remake</td>
-					<td>time</td>
-				</tr>
-			</table>
-		</div>
-		<div style="margin-top: 10px;">
-			<input type="button" id="getWords" value="getWords"/>
-		</div>
-	</div>
-	
-	<div id="wordRecord">
-		<div>今日单词:
-					答对 <span id="win" class="red">0</span> 次,
-					答错 <span id="fail" class="red">0</span> 次,
-					回答了 <span id="StudySum" class="red">0</span> 次,
-					还需学习 <span id="wordSum" class="red">50</span> 个单词</div>
-		<div>昨日: 答对 <span id="winDay" class="red">0</span> 个,
-					答错 <span id="failDay" class="red">0</span> 个,
-					一共学习了 <span id="sumDay" class="red">0</span> 个单词,
-					共回答<span id="sumSum" class="red">0</span> 次,继续加油</div>
-		<div> 共有 <span id="wordNumber" class="red">0</span> 个单词</div>
 
+<body>
+
+  <div class="calendar">
+	<div class="header">
+		<a data-action="prev-month" href="javascript:void(0)" title="Previous Month"><i></i></a>
+		<div class="text" data-render="month-year"></div>
+		<a data-action="next-month" href="javascript:void(0)" title="Next Month"><i></i></a>
 	</div>
+	<div class="months" data-flow="left">
+		<div class="month month-a">
+			<div class="render render-a"></div>
+		</div>
+		<div class="month month-b">
+			<div class="render render-b"></div>
+		</div>
+	</div>
+</div>
+  
+
+
+<script  src="../static/js/index.js"></script>
+
+
+
+
 </body>
-
-
-<script src="/static/js/jquery-1.8.0.min.js"></script>
-<!--<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>-->
-
-<script>
-	var localStorage = window.localStorage;
-	var userId = localStorage.getItem('userId');
-	var tableTitle = $("#tableBody").html();
-	var data = null;
-	var index = 0;
-	var chineseOrEnglish = 0;
-	var study = false;
-	var StudyWord = null;//全局的单词对象。
-
-	//初始化全局变量
-	function initialize(){
-		data = null;
-		index = 0;
-		chineseOrEnglish = 0;
-		study = false;
-		StudyWord = null;//全局的单词对象。
-		$("#now").html(1);
-	}
-
-	getStudyRecord(1);
-	getStudyRecord(2);
-	studyInitialize();
-
-	//初始化
-	function getStudyRecord(status){
-		$.ajax({
-			type:"get",
-			url:"/getStudyRecord",
-			dataType:'json',
-			data:{'userId':userId,
-				  'status':status},
-			success:function(result){
-				var record = result.data;
-				if(1 == status){
-					$("#win").html(record.win);
-					$("#fail").html(record.fail);
-					$("#StudySum").html(record.sum);
-				} else {
-					$("#winDay").html(record.winDay);
-					$("#failDay").html(record.failDay);
-					$("#sumDay").html(record.sumDay);
-					$("#sumSum").html(record.sum);
-				}
-			}
-		});
-
-	}
-
-	//初始化
-	function studyInitialize(){
-		$.ajax({
-			type:"get",
-			url:"/getWordList",
-			dataType:'json',
-			data:{'userId':userId,
-				'review':1},
-			success:function(result){
-				data = result.data;
-				$("#wordSum").html(data.length);
-			}
-		});
-
-		$.ajax({
-			type:"get",
-			url:"/getWordCount",
-			dataType:'json',
-			data:{'userId':userId},
-			success:function(result){
-				data = result.data;
-				$("#wordNumber").html(data);
-			}
-		});
-	}
-
-	$("#addButton").click(function(){
-		initialize();
-		$("#add").show();
-		$("#exam").hide();
-		$("#words").hide();
-		$("#wordRecord").hide();
-	});
-	
-	$("#wordsButton").click(function(){
-		initialize();
-		$("#words").show();
-		$("#exam").hide();
-		$("#add").hide();
-		$("#wordRecord").hide();
-		$.ajax({
-			type:"get",
-			url:"/getWordList",
-			dataType:'json',
-			data:{'userId':userId},
-			success:function(data){
-				var data = data.data;
-				var tableBody = tableTitle;
-				for(var i = 0; i < data.length; i++){
-					var a = data[i];
-					tableBody += '<tr>'
-								+'		<td>' + a.id + '</td>'
-								+'		<td>' + a.word + '</td>'
-								+'		<td>' + a.chinese + '</td>'
-								+'		<td>' + a.degree + '</td>'
-								+'		<td>' + a.review + '</td>'
-								+'		<td>' + a.updateDate + '</td>'
-								+'		<td>' + (a.success + a.error) + '</td>'
-								+'		<td>' + a.success + '</td>'
-								+'		<td>' + a.error +  '</td>'
-								+'		<td>' + a.remark + '</td>'
-								+'		<td>' + a.createDate + '</td>'
-								+'	</tr>';
-				}
-				$("#tableBody").html(tableBody);
-			}
-		})
-	});
-	
-	$("#examButton").click(function(){
-		initialize();
-		study = false;
-		exam(null);
-	});
-
-	$("#examNewButton").click(function(){
-		initialize();
-		study = false;
-		exam(true);
-	});
-	$("#examOldButton").click(function(){
-		initialize();
-		study = false;
-		exam(false);
-	});
-
-	$("#studyButton").click(function(){
-		initialize();
-		study = true;
-		exam(true);
-	});
-
-	$("#changeDegree").click(function(){
-		var answer = $("#answer").val();
-		if("" == answer){
-			alert("没有信息！");
-			return;
-		}
-		//手动修改分值，在回答问题时将分值提交。
-		//提交时会根据回答问题的对错进行一次分值计算。
-		StudyWord.degree = answer;
-		$("#answer").val("");
-	});
-
-
-	function exam(type){
-		$("#exam").show();
-		$("#add").hide();
-		$("#words").hide();
-		$("#wordRecord").hide();
-		//ajax查出需要学习的列表
-		$.ajax({
-			type:"get",
-			url:"/getWordList",
-			dataType:'json',
-			data:{'userId':userId,
-				  'review':1,
-				  'type':type},
-			success:function(result){
-				data = result.data;
-				$("#sum").html(data.length);
-				if(data.length == 0){
-					alert("没有要复习的单词！");
-				} else {
-					StudyWord = data[index];
-					filling(data[0]);
-				}
-			}
-		});
-	}
-	//将结果填充至页面
-	function filling(data){
-		//为全局进行时单词赋值。
-		var r = Math.floor(Math.random() * 100);
-		chineseOrEnglish = r % 2;
-		if(chineseOrEnglish == 0){
-			$("#question").html(data.word);
-		} else {
-			$("#question").html(data.chinese);
-		}
-	}
-
-	function auswerFinish(){
-		var answer = $("#answer").val();
-		if("" == answer){
-			alert("不能不回答就提交！");
-			return;
-		}
-		var reg=new RegExp(answer);
-		var str="";
-		var correct = false;
-		StudyWord = data[index];
-		if(chineseOrEnglish == 0){
-			str = StudyWord.chinese;
-			//中文答案模糊匹配
-			if(reg.test(str)){
-				StudyWord.success++;
-				correct = true;
-			} else {
-				StudyWord.error++;
-				correct = false;
-				alert(str);
-			}
-		} else {
-			str = StudyWord.word;
-			//英文答案精准匹配
-			if(answer == str){
-				StudyWord.success++;
-				correct = true;
-			} else {
-				StudyWord.error++;
-				correct = false;
-				alert(str);
-			}
-		}
-
-		//调用数据库提交信息。
-		$.ajax({
-			type:"post",
-			url:"/update",
-			dataType:'json',
-			data:{'data':JSON.stringify(StudyWord),
-				'correct':correct,
-				'study':study},
-			success:function(result){
-				$("#answer").val("");
-			}
-		});
-
-		if(study){
-			studyFunction(correct, StudyWord);
-		}
-
-		index++;
-		if(index >= data.length){
-			alert('finished');
-			return ;
-		}
-		$("#now").html(index + 1);
-		filling(data[index]);
-
-	}
-
-	function studyFunction(correct, studyWord){
-		if(correct){
-			studyWord.degree = studyWord.degree * 1.1;
-			if(studyWord.degree < 50){
-				if(studyWord.degree >= 40){
-					data.push(studyWord);
-				} else if(studyWord.degree < 40 && studyWord.degree >= 25){
-					addData(studyWord, 5, 12);
-				} else {
-					addData(studyWord, 2, 6);
-				}
-				$("#sum").html(data.length);
-			}
-		} else {
-			addData(studyWord, 2, 6);
-			studyWord.degree = studyWord.degree * 0.9;
-			$("#sum").html(data.length);
-		}
-	}
-
-	function addData(studyWord, min, max){
-		if(index + max <= data.length){
-			data.splice(index + randomNum(min, max), 0, studyWord);
-		} else {
-			data.push(studyWord);
-		}
-	}
-
-	$('#answer').keypress(function(event){
-		if(event.keyCode == '13'){
-			auswerFinish();
-		}
-	});
-
-	$("#finishAnswer").click(function(){
-		auswerFinish();
-	});
-	
-	$("#addData").click(function(){
-		$.ajax({
-			type : "get",
-			url : "/addData",
-			dataType:'json',
-			data : {'chinese':$("#chinese").val(), 
-					'word':$("#english").val(),
-					'userId':userId,
-					'remark':$("#remark").val()},//数据，json字符串
-			success : function(data) {//请求成功
-				if('Repetition' == data.data){
-					alert('单词已存在');
-				}
-				$("#result").html($("#english").val() + " : " + $("#chinese").val() + " : " + $("#remark").val());
-				$("#chinese").val("");
-				$("#english").val("");
-				$("#remark").val("");
-			}
-		});
-	});
-
-	$("#english").blur(function(){
-		$.ajax({
-			type : "get",
-			url : "/repetitionWord",
-			dataType:'json',
-			data : {
-				'word':$("#english").val(),
-				'userId':userId},//数据，json字符串
-			success : function(data) {//请求成功
-				if(!data.data){
-					alert('单词已存在');
-				}
-			}
-		});
-	});
-
-	//生成随机数函数
-	function randomNum(minNum,maxNum){
-		switch(arguments.length){
-			case 1:
-				return parseInt(Math.random()*minNum+1);
-				break;
-			case 2:
-				return parseInt(Math.random()*(maxNum-minNum+1)+minNum);
-				break;
-			default:
-				return 0;
-				break;
-		}
-	}
-
-
-</script>
 
 </html>
