--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,695 +1,103 @@
-/*--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
---*/
-
-/* reset */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-dl,
-dt,
-dd,
-ol,
-nav ul,
-nav li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-copyright,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+body{
+	margin:0;
+	color:#444;
+	background-color:#98c2c2;
+	font:300 18px/18px Roboto, sans-serif;
+	transition:background .4s ease-in-out 0s;
 }
-
-article,
-aside,
-details,
-figcaption,
-figure,
-copyright,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-ol,
-ul {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-/* start editing from here */
-a {
-    text-decoration: none;
-}
-
-.txt-rt {
-    text-align: right;
-}
-
-/* text align right */
-.txt-lt {
-    text-align: left;
-}
-
-/* text align left */
-.txt-center {
-    text-align: center;
-}
-
-/* text align center */
-.float-rt {
-    float: right;
-}
-
-/* float right */
-.float-lt {
-    float: left;
-}
-
-/* float left */
-.clear {
-    clear: both;
-}
-
-/* clear float */
-.pos-relative {
-    position: relative;
-}
-
-/* Position Relative */
-.pos-absolute {
-    position: absolute;
-}
-
-/* Position Absolute */
-.vertical-base {
-    vertical-align: baseline;
-}
-
-/* vertical align baseline */
-.vertical-top {
-    vertical-align: top;
-}
-
-/* vertical align top */
-nav.vertical ul li {
-    display: block;
-}
-
-/* vertical menu */
-nav.horizontal ul li {
-    display: inline-block;
-}
-
-/* horizontal menu */
-img {
-    max-width: 100%;
-}
-
-/* //end reset */
-
-body {
-    font-size: 100%;
-    font-family: 'Roboto', sans-serif;
-}
-
-.main-bg {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url("https://picsum.photos/1920/1080");
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    -ms-background-size: cover;
-    min-height: 100vh;
-    background-color: #262626;
-}
-
-/* title */
-h1 {
-    font-size: 3vw;
-    color: #fff;
-    text-align: center;
-    padding: 2.5vw 1vw 1vw;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    font-weight: 600;
-}
-
-/* //title */
-
-.sub-main-w3 {
-    margin: 1.5vw 16vw;
-    margin: 5vw auto;
-    max-width: 1067px;
-}
-
-.image-style {
-    background: url(../images/m.jpg) no-repeat center;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    -ms-background-size: cover;
-    min-height: 371px;
-}
-
-/* vertical tabs */
-.vertical-tab {
-    color: #333;
-    display: block;
-    margin: auto;
-    position: relative;
-    float: left;
-    /* width: 70%; */
-}
-
-.image-style {
-    float: left;
-    width: 25%;
-}
-
-.vertical-tab input[name="sections"] {
-    left: -9999px;
-    position: absolute;
-    top: -9999px;
-}
-
-.vertical-tab .section-w3ls {
-    display: block;
-}
-
-.vertical-tab .section-w3ls label {
-    background: #fff;
-    border-right: 1px solid #dcdcdc;
-    cursor: pointer;
-    display: block;
-    font-size: 17px;
-    padding: 33px 20px;
-    position: relative;
-    width: 189px;
-    z-index: 100;
-    color: #111;
-    text-align: center;
-}
-
-.vertical-tab .section-w3ls article {
-    display: none;
-    left: 230px;
-    min-width: 570px;
-    position: absolute;
-    top: 0;
-}
-
-/* .vertical-tab .section-w3ls article:after {
-    background-color: #fff;
-    bottom: 0;
-    content: "";
-    display: block;
-    left: -229px;
-    position: absolute;
-    top: 0;
-    width: 220px;
-    z-index: 1;
-} */
-
-.vertical-tab input[name="sections"]:checked+label {
-    background: #00ad45;
-    border-right: 1px solid #00ad45;
-    color: #fff;
-}
-
-.vertical-tab input[name="sections"]:checked~article {
-    display: block;
-}
-
-label.icon-left-w3pvt span {
-    display: block;
-    font-size: 30px;
-    margin-bottom: 7.8px;
-}
-
-/* //vertical tabs */
-
-/* form style */
-.sub-main-w3 form {
-    background: #ffff;
-    padding: 2em;
-}
-
-.legend {
-    color: #000;
-    font-size: 24px;
-    text-align: center;
-    margin-bottom: 1.2em;
-    font-weight: 400;
-}
-
-p.para-style {
-    margin-bottom: .8em;
-    font-size: 15px;
-    letter-spacing: .5px;
-    line-height: 1.8;
-}
-
-p.para-style-2 {
-    font-size: 15px;
-    letter-spacing: .5px;
-    line-height: 1.8;
-    margin-bottom: 2em;
-}
-
-p.para-style-2 a {
-    color: blue;
-}
-
-.input {
-    margin-bottom: 1em;
-    padding: 13px 15px;
-    border: 1px solid #eee;
-    background: #eee;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-
-.input span {
-    font-size: 15px;
-    color: #464646;
-    margin-right: 10px;
-}
-
-.input input {
-    color: #000;
-    font-size: 14px;
-    letter-spacing: 1px;
-    box-sizing: border-box;
-    border: none;
-    outline: none;
-    background: transparent;
-    width: 100%;
-}
-
-.submit {
-    margin: 2.3em auto 0;
-    background: #00ad45;
-    border: none;
-    cursor: pointer;
-    font-weight: 600;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-    transition: 0.5s all;
-    display: block;
-    color: #fff;
-    padding: 14px 30px;
-    -webkit-border-radius: 0;
-    -o-border-radius: 0;
-    -ms-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    font-size: 15px;
-    letter-spacing: 2px;
-    width: 100%;
-}
-
-.submit:hover {
-    opacity: .8;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-    transition: 0.5s all;
-}
-
-a.bottom-text-w3ls {
-    color: #757474;
-    font-size: 14px;
-    display: inherit;
-    letter-spacing: 1px;
-    text-align: center;
-    margin-top: 3.2em;
-}
-
-/* //form style */
-
-/* copyright */
-.copyright {
-    margin-top: 9vw;
-    padding-bottom: 1.5vw;
-}
-
-.copyright h2 {
-    font-size: 15px;
-    color: #fff;
-    letter-spacing: 1px;
-    text-align: center;
-    line-height: 1.8;
-}
-
-.copyright h2 a {
-    color: #fff;
-    font-weight: bold;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-    transition: 0.5s all;
-}
-
-.copyright h2 a:hover {
-    opacity: .8;
-    -webkit-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-    transition: 0.5s all;
-}
-
-/* //copyright */
-
-/* responsive */
-@media(max-width: 1080px) {
-    h1 {
-        font-size: 4vw;
-    }
-}
-
-@media(max-width: 1050px) {
-    .sub-main-w3 {
-        max-width: 900px;
-    }
-
-    .vertical-tab .section-w3ls article {
-        min-width: 445px;
-    }
-
-    p.para-style-2 {
-        font-size: 14px;
-        margin-bottom: 1em;
-    }
-
-    p.para-style {
-        margin-bottom: .7em;
-        font-size: 14px;
-    }
-}
-
-@media(max-width: 900px) {
-    .sub-main-w3 {
-        max-width: 768px;
-    }
-
-    .vertical-tab .section-w3ls article {
-        min-width: 400px;
-        left: 175px;
-    }
-
-    .vertical-tab .section-w3ls label {
-        width: 134px;
-        font-size: 15px;
-        padding: 34px 20px;
-    }
-
-    h1 {
-        font-size: 5vw;
-        padding: 4.5vw 1vw 1vw;
-    }
-}
-
-@media(max-width: 768px) {
-    .sub-main-w3 {
-        max-width: 575px;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    }
-
-    .image-style {
-        float: none;
-        width: 100%;
-        min-height: 300px;
-        order: 2;
-    }
-
-    .vertical-tab {
-        float: none;
-        width: 100%;
-    }
-}
-
-@media(max-width: 667px) {
-    h1 {
-        font-size: 6vw;
-    }
-}
-
-@media(max-width: 640px) {
-    .copyright h2 {
-        font-size: 14px;
-    }
-}
-
-@media(max-width: 600px) {
-    .sub-main-w3 {
-        max-width: 500px;
-    }
-
-    .vertical-tab .section-w3ls article {
-        min-width: 365px;
-        left: 135px;
-    }
-
-    .vertical-tab .section-w3ls label {
-        width: 114px;
-        font-size: 15px;
-        padding: 31px 10px;
-    }
-
-    h1 {
-        font-size: 7vw;
-    }
-}
-
-@media(max-width: 480px) {
-    .vertical-tab .section-w3ls article {
-        min-width: 291px;
-        left: 109px;
-    }
-
-    .vertical-tab .section-w3ls label {
-        width: 89px;
-        font-size: 14px;
-        padding: 26.8px 10px;
-    }
-
-    .sub-main-w3 {
-        max-width: 400px;
-    }
-
-    .image-style {
-        min-height: 220px;
-    }
-
-    .sub-main-w3 form {
-        padding: 1.5em;
-    }
-
-    .submit {
-        font-size: 14px;
-    }
-
-    .input input {
-        font-size: 13px;
-    }
-
-    p.para-style {
-        margin-bottom: .4em;
-        font-size: 13px;
-    }
-
-    p.para-style-2 {
-        font-size: 13px;
-    }
-
-    .input {
-        padding: 12px 12px;
-    }
-
-    a.bottom-text-w3ls {
-        margin-top: 3em;
-    }
-
-    .last-btn {
-        margin: 1em auto 0;
-    }
-
-    .copyright h2 {
-        font-size: 12px;
-    }
-}
-
-@media(max-width: 414px) {
-    .sub-main-w3 {
-        max-width: 320px;
-    }
-
-    .vertical-tab .section-w3ls article {
-        position: static;
-    }
-
-    .vertical-tab .section-w3ls label {
-        width: 100%;
-        font-size: 14px;
-        padding: 20px 0;
-        border-right: none;
-        border-bottom: 1px solid #dcdcdc;
-        border-top: 1px solid #dcdcdc;
-    }
-
-    .vertical-tab input[name="sections"]:checked+label {
-        border-right: none;
-        border-bottom: 1px solid #000;
-        border-top: none;
-    }
-
-    .image-style {
-        min-height: 190px;
-    }
-
-    h1 {
-        font-size: 1.8em;
-        padding: 6.5vw 1vw 3vw;
-    }
-
-    .copyright h2 {
-        font-size: 13px;
-    }
-
-    .last-btn {
-        margin: 1.5em auto 0;
-    }
-
-    p.para-style {
-        margin-bottom: 1em;
-    }
-
-    p.para-style-2 {
-        margin-bottom: 2em;
-    }
-
-}
-
-@media(max-width: 320px) {
-    .sub-main-w3 {
-        max-width: 270px;
-    }
-
-    .vertical-tab .section-w3ls article {
-        min-width: 270px;
-    }
-}
-
-/* //responsive */
+*,:after,:before{box-sizing:border-box}
+.pull-left{float:left}
+.pull-right{float:right}
+.clearfix:after,.clearfix:before{content:'';display:table}
+.clearfix:after{clear:both;display:block}
+
+.calendar{width:300px;font-size:100%;margin:50px auto 0;-webkit-perspective:1000px;perspective:1000px;cursor:default;position:relative}
+.calendar .header{height:100px;position:relative;color:#fff}
+.calendar .header .text{position:absolute;top:0;left:0;right:0;bottom:0;background-color:#308ff0;padding:15px;-webkit-transform:rotateX(90deg);transform:rotateX(90deg);-webkit-transform-origin:bottom;transform-origin:bottom;-webkit-backface-visibility:hidden;backface-visibility:hidden;transition:.4s ease-in-out 0s;box-shadow:0 6px 20px 0 rgba(0,0,0,.19), 0 8px 17px 0 rgba(0,0,0,.2);opacity:0}
+.calendar .header .text>span{text-align:center;padding:26px;display:block}
+.calendar .header.active .text{-webkit-transform:rotateX(0deg);transform:rotateX(0deg);opacity:1}
+.months{width:100%;height:280px;position:relative}
+.months .hr{height:1px;margin:15px 0;background:#ccc}
+.month{padding:15px;width:inherit;height:inherit;background:#fff;position:absolute;-webkit-backface-visibility:hidden;backface-visibility:hidden;transition:all .4s ease-in-out 0s;box-shadow:0 6px 20px 0 rgba(0,0,0,.19),0 8px 17px 0 rgba(0,0,0,.2)}
+.months[data-flow="left"] .month{-webkit-transform:rotateY(-180deg);transform:rotateY(-180deg)}
+.months[data-flow="right"] .month{-webkit-transform:rotateY(180deg);transform:rotateY(180deg)}
+.table{width:100%;font-size:10px;font-weight:400;display:table}
+.table .row{display:table-row}
+.table .row.head{color:#308ff0;text-transform:uppercase}
+.table .row .cell{width:14.28%;padding:5px;text-align:center;display:table-cell}
+.table .row .cell.disable{color:#ccc}
+.table .row .cell span{display:block;width:28px;height:28px;line-height:28px;transition:color,background .4s ease-in-out 0s}
+.table .row .cell.active span{color:#fff;background-color:#308ff0}
+.months .month[data-active="true"]{-webkit-transform:rotateY(0);transform:rotateY(0)}
+.header [data-action]{color:inherit;position:absolute;top:50%;margin-top:-20px;width:40px;height:40px;z-index:1;opacity:0;transition:all .4s ease-in-out 0s}
+.header [data-action]>i{width:20px;height:20px;display:block;position:absolute;left:50%;top:50%;margin-top:-10px;margin-left:-10px}
+.header [data-action]>i:before,.header [data-action]>i:after{top:50%;margin-top:-1px;content:'';position:absolute;height:2px;width:20px;border-top:2px solid;border-radius:2px}
+.header [data-action*="prev"]{left:15px}
+.header [data-action*="next"]{right:15px}
+.header [data-action*="prev"]>i:before,.header [data-action*="prev"]>i:after{left:0}
+.header [data-action*="prev"]>i:before{top:3px;-webkit-transform:rotate(-45deg);transform:rotate(-45deg)}
+.header [data-action*="prev"]>i:after{top:auto;bottom:3px;-webkit-transform:rotate(45deg);transform:rotate(45deg)}
+.header [data-action*="next"]>i:before,.header [data-action*="next"]>i:after{right:0}
+.header [data-action*="next"]>i:before{top:auto;bottom:3px;-webkit-transform:rotate(-45deg);transform:rotate(-45deg)}
+.header [data-action*="next"]>i:after{top:3px;-webkit-transform:rotate(45deg);transform:rotate(45deg)}
+.header.active [data-action]{opacity:1}
+
+[data-theme="jan"]{background-color:#90CAF9}
+[data-theme="jan"] .row.head{color:#1E88E5}
+[data-theme="jan"] .header .text,
+[data-theme="jan"] .table .row .cell.active span{background-color:#1E88E5}
+
+[data-theme="feb"]{background-color:#81D4FA}
+[data-theme="feb"] .row.head{color:#039BE5}
+[data-theme="feb"] .header .text,
+[data-theme="feb"] .table .row .cell.active span{background-color:#039BE5}
+
+[data-theme="mar"]{background-color:#80CBC4}
+[data-theme="mar"] .row.head{color:#00897B}
+[data-theme="mar"] .header .text,
+[data-theme="mar"] .table .row .cell.active span{background-color:#00897B}
+
+[data-theme="apr"]{background-color:#C5E1A5}
+[data-theme="apr"] .row.head{color:#7CB342}
+[data-theme="apr"] .header .text,
+[data-theme="apr"] .table .row .cell.active span{background-color:#7CB342}
+
+[data-theme="may"]{background-color:#FFE082}
+[data-theme="may"] .row.head{color:#FFB300}
+[data-theme="may"] .header .text,
+[data-theme="may"] .table .row .cell.active span{background-color:#FFB300}
+
+[data-theme="jun"]{background-color:#FFAB91}
+[data-theme="jun"] .row.head{color:#F4511E}
+[data-theme="jun"] .header .text,
+[data-theme="jun"] .table .row .cell.active span{background-color:#F4511E}
+
+[data-theme="jul"]{background-color:#CE93D8}
+[data-theme="jul"] .row.head{color:#8E24AA}
+[data-theme="jul"] .header .text,
+[data-theme="jul"] .table .row .cell.active span{background-color:#8E24AA}
+
+[data-theme="aug"]{background-color:#B39DDB}
+[data-theme="aug"] .row.head{color:#5E35B1}
+[data-theme="aug"] .header .text,
+[data-theme="aug"] .table .row .cell.active span{background-color:#5E35B1}
+
+[data-theme="sep"]{background-color:#EF9A9A}
+[data-theme="sep"] .row.head{color:#E53935}
+[data-theme="sep"] .header .text,
+[data-theme="sep"] .table .row .cell.active span{background-color:#E53935}
+
+[data-theme="oct"]{background-color:#CE93D8}
+[data-theme="oct"] .row.head{color:#8E24AA}
+[data-theme="oct"] .header .text,
+[data-theme="oct"] .table .row .cell.active span{background-color:#8E24AA}
+
+[data-theme="nov"]{background-color:#BCAAA4}
+[data-theme="nov"] .row.head{color:#6D4C41}
+[data-theme="nov"] .header .text,
+[data-theme="nov"] .table .row .cell.active span{background-color:#6D4C41}
+
+[data-theme="dec"]{background-color:#B0BEC5}
+[data-theme="dec"] .row.head{color:#546E7A}
+[data-theme="dec"] .header .text,
+[data-theme="dec"] .table .row .cell.active span{background-color:#546E7A}
