--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
 	<!-- Meta tag Keywords -->
 
 	<!-- css files -->
-	<link rel="stylesheet" href="../static/css/style.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="../static/css/style_login.css" type="text/css" media="all" />
 	<!-- Style-CSS -->
 	<link href="../static/css/font-awesome.min.css" rel="stylesheet">
 	<!-- Font-Awesome-Icons-CSS -->
