增加了鼠标经过时浮现气泡功能；增加了点击弹窗显示详细信息功能；增加了二级弹窗可以新增课时功能；创建了课时表；新增了学习表；优化了一些BUG；

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -101,3 +101,27 @@ body{
 [data-theme="dec"] .row.head{color:#546E7A}
 [data-theme="dec"] .header .text,
 [data-theme="dec"] .table .row .cell.active span{background-color:#546E7A}
+
+
+/* 鼠标悬停相关 */
+#jumpWindow {
+	position: absolute;
+	display: none;
+	padding: 10px;
+	width: 160px;
+	background: #e0edf7;
+	border-radius: 6px;
+}
+
+#jumpWindow::before {
+	content: "";
+	position: relative;
+	top: -20px;
+	left: 10px;
+	width: 0;
+	height: 0;
+	display: block;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-bottom: 10px solid #e0edf7;
+}
