增加可cookis保存用户信息功能；增加了充值功能；完成了日历显示数据对接功能；完成了日历弹窗数据对接；完成了充值和消费计算功能；增加了AOP切面用于保存操作日志；增加了操作日志系统；优化了一些页面；优化了一些BUG。

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -102,6 +102,7 @@ body{
 [data-theme="dec"] .header .text,
 [data-theme="dec"] .table .row .cell.active span{background-color:#546E7A}
 
+.studied span{color: #0000FF;}
 
 /* 鼠标悬停相关 */
 #jumpWindow {
@@ -111,6 +112,7 @@ body{
 	width: 160px;
 	background: #e0edf7;
 	border-radius: 6px;
+	font-size: 13px;
 }
 
 #jumpWindow::before {
